--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.0</version> <!-- Use the latest version compatible with your Jackson -->
+        </dependency>
+
     </dependencies>
 
     <build>
