--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
             <version>2.17.0</version> <!-- Use the latest version compatible with your Jackson -->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
